<?xml version="1.0"?>
<package format="2">
  <name>map_builder</name>
  <version>0.0.1</version>
  <description>The map_builder package</description>
  <maintainer email="YY@ggkk.com">Your Name</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>octomap</build_depend>         
  <build_depend>octomap_msgs</build_depend>    
  <build_depend>octomap_ros</build_depend>     
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>octomap</exec_depend>           
  <exec_depend>octomap_msgs</exec_depend>      
  <exec_depend>octomap_ros</exec_depend>       
  <export>
    <build_type>catkin</build_type>
  </export>
</package>
