<package format="2">
  <name>pcd_publisher</name>
  <version>0.0.1</version>
  <description>Publish PCD and odometry-based point clouds</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
</package>

