<?xml version="1.0"?>
<package format="2">
  <name>simulator</name>
  <version>0.0.1</version>
  <description>A ROS package containing launch files for launching nodes.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
</package>